--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
          
     </div>
    
-   <!-- <script src="/socket.io/socket.io.js" charset="UTF-8"></script>-->
+   <script src="/socket.io/socket.io.js" charset="UTF-8"></script>
     <script type="text/javascript" src="js/index.js"></script>
    
 </body>
